The weather data can be now retrieved and displayed by sending requests to the API

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <div class="location">
     <h1 class="location-timezone">Timezone</h1>
-    <p>Icon</p>
+    <span><img src="" alt="" class="temperature-icon"></span>
   </div>
 
   <div class="temperature">
-    <div class="degree-section">
+    <div class="degree-section" onclick="setTemperature()">
       <h2 class="temperature-degree">32</h2>
-      <span>F</span>
+      <span class="formula">F</span>
     </div>
 
     <div class="temperature-description">Its cold!</div>
